Code quality improvements: fix bugs, modernise Java idioms, remove redundant code